# rs-ekyc-pipeline

./: Cargo.toml  README.md
src/: lib.rs
src/config/: config.rs
src/helper/: face_helper.rs  mod.rs
src/modules/: face_anti_spoofing.rs  face_detection_client.rs  face_id_client.rs  face_quality_client.rs  mod.rs
src/pipeline/: pipeline.rs
src/utils/: coordinate.rs  image.rs  mod.rs  utils.rs
